# BrightStar-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: GeneralArchitecture.mmd
include/: MainWindow.h  StyleManager.h
include/GameProject/: NewProjectWidget.h  OpenProjectWidget.h  QProjectBrowserDialog.h
resources/: resources.qrc
resources/styles/: BrightStarDark.qss
src/: MainWindow.cpp  StyleManager.cpp  main.cpp
src/GameProject/: NewProjectWidget.cpp  OpenProjectWidget.cpp  QProjectBrowserDialog.cpp
ui/GameProject/: NewProjectWidget.ui  OpenProjectWidget.ui  QProjectBrowserDialog.ui
